--- a/Warbler/templates/users/show.html
+++ b/Warbler/templates/users/show.html
@@ -12,6 +12,18 @@
             <img src="{{ user.image_url }}" alt="user image" class="timeline-image">
           </a>
 
+          {% if g.user.id != user.id %}
+          <form method="POST" action="/messages/{{ message.id }}/like" id="messages-form">
+            <button class="
+              btn
+              btn-sm
+              {{'btn-primary' if message.id in likes else 'btn-secondary'}}"
+              >
+              <i class="fa fa-thumbs-up"></i>
+            </button>
+          </form>
+          {% endif %}
+
           <div class="message-area">
             <a href="/users/{{ user.id }}">@{{ user.username }}</a>
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
