--- a/Warbler/static/stylesheets/style.css
+++ b/Warbler/static/stylesheets/style.css
@@ -202,6 +202,7 @@ nav + .container {
   opacity: 0.7;
   background-size: cover;
   background-position: top center;
+  width: 100%;
 }
 
 .full-width {
@@ -211,6 +212,7 @@ nav + .container {
   left: 50%;
   right: 50%;
 }
+
 
 .row.full-width {
   background-color: #fff;
