--- a/Warbler/templates/home.html
+++ b/Warbler/templates/home.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
   <div class="row">
-
     <aside class="col-md-4 col-lg-3 col-sm-12" id="home-aside">
       <div class="card user-card">
         <div>
@@ -33,6 +32,10 @@
                 <a href="/users/{{ g.user.id }}/followers">{{ g.user.followers | length }}</a>
               </h4>
             </li>
+            <li class="stat">
+              <p class="small">Likes</p>
+              <h4><a href="/users/{{ g.user.id }}/likes">{{ g.user.likes | length }}</h4>
+            </li>
           </ul>
         </div>
       </div>
@@ -49,14 +52,18 @@
             <div class="message-area">
               <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
-              <form method="POST" action="/messages/{{ msg.id }}/like" id="messages-form">
-                <button class="
-                  btn
-                  btn-sm
-                  {{'btn-primary' if msg.id in likes else 'btn-secondary'}}">
-                  <i class="fa fa-thumbs-up"></i>
-                </button>
-              </form>
+
+              {% if g.user.id != msg.user.id %}
+                <form method="POST" action="/messages/{{ msg.id }}/like" id="messages-form">
+                  <button class="
+                    btn
+                    btn-sm
+                    {{'btn-primary' if msg.id in likes else 'btn-secondary'}}">
+                    <i class="fa fa-thumbs-up"></i>
+                  </button>
+                </form>
+              {% endif %}
+
               <p>{{ msg.text }}</p>
             </div>
 
