--- a/Warbler/templates/messages/show.html
+++ b/Warbler/templates/messages/show.html
@@ -4,34 +4,49 @@
 
   <div class="bg"></div>
   <div class="row justify-content-center">
+
     <div class="col-md-6">
       <ul class="list-group no-hover" id="messages">
         <li class="list-group-item">
           <a href="{{ url_for('users_show', user_id=message.user.id) }}">
             <img src="{{ message.user.image_url }}" alt="" class="timeline-image">
           </a>
-          <a href="{{ url_for('users_likes', user_id=message.user.id) }}">Likes</a>
 
           <div class="message-area">
             <div class="message-heading">
               <a href="/users/{{ message.user.id }}">@{{ message.user.username }}</a>
               {% if g.user %}
-                {% if g.user.id == message.user.id %}
-                  <form method="POST"
-                        action="/messages/{{ message.id }}/delete">
-                    <button class="btn btn-outline-danger">Delete</button>
-                  </form>
-                {% elif g.user.is_following(message.user) %}
-                  <form method="POST"
-                        action="/users/stop-following/{{ message.user.id }}">
-                    <button class="btn btn-primary">Unfollow</button>
-                  </form>
-                {% else %}
-                  <form method="POST" action="/users/follow/{{ message.user.id }}">
-                    <button class="btn btn-outline-primary btn-sm">Follow</button>
-                  </form>
-                {% endif %}
+                <div>
+                  <!-- {% if g.user.id != message.user.id %}
+                    <form method="POST" action="/messages/{{ message.id }}/like">
+                      <button class="
+                        btn
+                        btn-sm
+                        {{'btn-primary' if message.id in likes else 'btn-secondary'}}"
+                        >
+                        <i class="fa fa-thumbs-up"></i>
+                      </button>
+                    </form>
+                  {% endif %} -->
+                  {% if g.user.id == message.user.id %}
+                    <form method="POST"
+                          action="/messages/{{ message.id }}/delete">
+                      <button class="btn btn-outline-danger">Delete</button>
+                    </form>
+
+                  {% elif g.user.is_following(message.user) %}
+                    <form method="POST"
+                          action="/users/stop-following/{{ message.user.id }}">
+                      <button class="btn btn-primary">Unfollow</button>
+                    </form>
+                  {% else %}
+                    <form method="POST" action="/users/follow/{{ message.user.id }}">
+                      <button class="btn btn-outline-primary btn-sm">Follow</button>
+                    </form>
+                  {% endif %}
+                </div>
               {% endif %}
+
             </div>
             <p class="single-message">{{ message.text }}</p>
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
