--- a/Warbler/templates/users/detail.html
+++ b/Warbler/templates/users/detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div id="warbler-hero" class="full-width"></div>
+<img src="../../static/images/warbler-hero.jpg" alt="Warbler-background" id="warbler-hero">
 <img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
 <div class="row full-width">
   <div class="container">
@@ -29,7 +29,7 @@
           </li>
           <li class="stat">
             <p class="small">Likes</p>
-            <h4>{{ user.likes | length }}</h4>
+            <h4><a href="/users/{{ user.id }}/likes">{{ user.likes | length }}</h4>
           </li>
           <div class="ml-auto">
             {% if g.user.id == user.id %}
